cmake_minimum_required(VERSION 2.9)
project(common_vme_sis)

file(GLOB src *.cpp)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${src})
ADD_EXECUTABLE(test_sis test/test_sis.cpp)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} common_vme common_debug)

TARGET_LINK_LIBRARIES(test_sis ${PROJECT_NAME} common_vme common_debug ${FrameworkLib})
FILE(GLOB src *.h)
INSTALL(FILES ${src} DESTINATION include/common/vme/sis)
#INSTALL_TARGETS(/lib ${PROJECT_NAME})
INSTALL(TARGETS ${PROJECT_NAME}
        DESTINATION "lib"
        PERMISSIONS OWNER_WRITE OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
#INSTALL_TARGETS(/bin test_sis)
INSTALL(TARGETS test_sis
        DESTINATION "bin"
        PERMISSIONS OWNER_WRITE OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)